Fix FFMPEG issue associated with even:odd anims.

Quick fix for a bug causing animations with one odd dimension
to fail to render and report an unkown error. FFMPEG requires
even render dimensions, and fixing that in even:odd cases creates
a minor shift in aspect ratio, causing animation rendering to fail
while preserve aspect ratio is set.

BUG:396128
(cherry picked from commit f5ac73ca0e1a34a508ac74831afc7ea44bbf3a55)